Added ginal presentation figures

--- a/10666645qcdxnrsmhkgr/Oly_larval.bib
+++ b/10666645qcdxnrsmhkgr/Oly_larval.bib
@@ -13,9 +13,25 @@
   year    =  2016
 }
 
+@ARTICLE{McKenna2010-kq,
+  title    = "The Genome Analysis Toolkit: a {MapReduce} framework for
+              analyzing next-generation {DNA} sequencing data",
+  author   = "McKenna, Aaron and Hanna, Matthew and Banks, Eric and Sivachenko,
+              Andrey and Cibulskis, Kristian and Kernytsky, Andrew and
+              Garimella, Kiran and Altshuler, David and Gabriel, Stacey and
+              Daly, Mark and DePristo, Mark A",
+  journal  = "Genome Res.",
+  volume   =  20,
+  number   =  9,
+  pages    = "1297--1303",
+  month    =  sep,
+  year     =  2010,
+  language = "en"
+}
+
 @ARTICLE{Coe1932-nq,
   title   = "Development of the gonads and the sequence of the sexual phases in
-             the California oyster (\textit{Ostrea lurida})",
+             the {California} oyster (\textit{Ostrea lurida})",
   author  = "Coe, Wesley R",
   journal = "Scripps Institution of Oceanography",
   year    =  1932
@@ -97,17 +113,21 @@
              Stephan B",
   journal = "Non-Genetic Inheritance",
   volume  =  1,
+  pages   =  "38--50",
   month   =  jan,
   year    =  2013
 }
 
 @ARTICLE{Heare2017-uv,
-  title   = "Evidence of \textit{Ostrea lurida} (Carpenter 1864) population
-             structure in Puget Sound, {WA}",
+  title   = "Evidence of \textit{Ostrea lurida} ({Carpenter} 1864) population
+             structure in {Puget Sound}, {WA}",
   author  = "Heare, Jake E and Blake, Brady and Davis, Jonathan P and
              Vadopalas, Brent and Roberts, Steven B",
   journal = "Marine Ecology",
-  year    =  2017
+  volume  =  38,
+  number  =  5,
+  year    =  2017,
+  doi     = "10.1111/maec.12458"
 }
 
 @ARTICLE{Vehmaa2012-ub,
@@ -160,9 +180,9 @@
 }
 
 @ARTICLE{Seale2009-uw,
-  title     = "Seasonal settlement of Olympia oyster larvae, \textit{Ostrea
-               lurida} Carpenter 1864 and its relationship to seawater
-               temperature in two southern California estuaries",
+  title     = "Seasonal settlement of {Olympia} oyster larvae, \textit{Ostrea
+               lurida} ({Carpenter} 1864) and its relationship to seawater
+               temperature in two southern {California} estuaries",
   author    = "Seale, E M and Zacherl, D C",
   journal   = "J. Shellfish Res.",
   publisher = "BioOne",
@@ -185,6 +205,43 @@
   language    = "en"
 }
 
+@ARTICLE{Petersen2010-td,
+  title    = "Nuclear and {mtDNA} lineage diversity in wild and cultured
+              Pacific lion-paw scallop,Nodipecten subnodosus(Baja California
+              Peninsula, Mexico)",
+  author   = "Petersen, Jessica L and Ibarra, Ana Maria and May, Bernie",
+  journal  = "Mar. Biol.",
+  volume   =  157,
+  number   =  12,
+  pages    = "2751--2767",
+  month    =  aug,
+  year     =  2010,
+  language = "en",
+  issn     = "0025-3162",
+  pmid     = "24391254",
+  doi      = "10.1007/s00227-010-1534-1",
+  pmc      = "PMC3873021"
+}
+
+
+@ARTICLE{Evans2004-oh,
+  title   = "Loss of genetic variation at microsatellite loci in hatchery
+             produced abalone in Australia (Haliotis rubra) and South Africa
+             (Haliotis midae)",
+  author  = "Evans, B and Bartlett, J and Sweijd, N and Cook, P and Elliott, N
+             G",
+  journal = "Aquaculture",
+  volume  =  233,
+  number  =  1,
+  pages   = "109--127",
+  month   =  apr,
+  year    =  2004,
+  issn    = "0044-8486",
+  doi     = "10.1016/j.aquaculture.2003.09.037"
+}
+
+
+
 @ARTICLE{Danecek2011-lh,
   title       = "The variant call format and {VCFtools}",
   author      = "Danecek, Petr and Auton, Adam and Abecasis, Goncalo and
@@ -201,6 +258,40 @@
   month       =  aug,
   year        =  2011,
   language    = "en"
+}
+
+@ARTICLE{Lind2009-is,
+  title   = "Decreased genetic diversity and a reduced effective population
+             size in cultured silver-lipped pearl oysters (\textit{Pinctada maxima})",
+  author  = "Lind, Curtis E and Evans, Brad S and Knauer, Jens and Taylor,
+             Joseph J U and Jerry, Dean R",
+  journal = "Aquaculture",
+  volume  =  286,
+  number  =  1,
+  pages   = "12--19",
+  month   =  jan,
+  year    =  2009,
+  issn    = "0044-8486",
+  doi     = "10.1016/j.aquaculture.2008.09.009"
+}
+
+
+@ARTICLE{Lallias2010-va,
+  title    = "Variance in the reproductive success of flat oyster \textit{Ostrea edulis}
+              {L}. assessed by parentage analyses in natural and experimental
+              conditions",
+  author   = "Lallias, D and Taris, N and Boudry, P and Bonhomme, F and
+              Lap{\`e}gue, S",
+  journal  = "Genet. Res.",
+  volume   =  92,
+  number   =  3,
+  pages    = "175--187",
+  month    =  jun,
+  year     =  2010,
+  language = "en",
+  issn     = "0016-6723, 1469-5073",
+  pmid     = "20667162",
+  doi      = "10.1017/S0016672310000248"
 }
 
 @ARTICLE{Teplitsky2008-fe,
@@ -243,8 +334,57 @@
   year    =  2012
 }
 
+@ARTICLE{Wang2009-gs,
+  title     = "Parentage and Sibship Inference From Multilocus Genotype Data
+               Under Polygamy",
+  author    = "Wang, J and Santure, A W",
+  journal   = "Genetics",
+  publisher = "Genetics",
+  volume    =  181,
+  number    =  4,
+  pages     = "1579--1594",
+  month     =  apr,
+  year      =  2009,
+  language  = "en",
+  issn      = "0016-6731, 1943-2631",
+  pmid      = "19221199",
+  doi       = "10.1534/genetics.108.100214"
+}
+
+@ARTICLE{Launey2001-yd,
+  title    = "High genetic load in the {Pacific} oyster \textit{Crassostrea gigas}",
+  author   = "Launey, S and Hedgecock, D",
+  journal  = "Genetics",
+  volume   =  159,
+  number   =  1,
+  pages    = "255--265",
+  month    =  sep,
+  year     =  2001,
+  language = "en",
+  issn     = "0016-6731",
+  pmid     = "11560902",
+  pmc      = "PMC1461778"
+}
+
+
+@ARTICLE{Wang2004-gx,
+  title     = "Sibship Reconstruction From Genetic Data With Typing Errors",
+  author    = "Wang, Jinliang",
+  journal   = "Genetics",
+  publisher = "Genetics",
+  volume    =  166,
+  number    =  4,
+  pages     = "1963--1979",
+  month     =  apr,
+  year      =  2004,
+  language  = "en",
+  issn      = "0016-6731, 1943-2631",
+  pmid      = "15126412",
+  doi       = "10.1534/genetics.166.4.1963"
+}
+
 @ARTICLE{Camara2009-sn,
-  title   = "Genetic aspects of restoring Olympia oysters and other native
+  title   = "Genetic aspects of restoring {Olympia} oysters and other native
              bivalves: balancing the need for action, good intentions, and the
              risks of making things worse",
   author  = "Camara, Mark D and Vadopalas, Brent",
@@ -314,38 +454,6 @@
   pages       = "356--375",
   month       =  may,
   year        =  2008,
-  language    = "en"
-}
-
-@TECHREPORT{Emerson_Heare2015-xl,
-  title       = "Evidence of Ostrea lurida (Carpenter 1864) population
-                 structure in Puget Sound, {WA}",
-  author      = "Emerson Heare, J and Blake, Brady and Davis, Jonathan P and
-                 Vadopalas, Brent and Roberts, Steven B",
-  publisher   = "PeerJ Inc.",
-  number      = "e1986",
-  institution = "PeerJ PrePrints",
-  month       =  dec,
-  year        =  2015,
-  language    = "en"
-}
-
-@ARTICLE{McKenna2010-kq,
-  title       = "The Genome Analysis Toolkit: a {MapReduce} framework for
-                 analyzing next-generation {DNA} sequencing data",
-  author      = "McKenna, Aaron and Hanna, Matthew and Banks, Eric and
-                 Sivachenko, Andrey and Cibulskis, Kristian and Kernytsky,
-                 Andrew and Garimella, Kiran and Altshuler, David and Gabriel,
-                 Stacey and Daly, Mark and DePristo, Mark A",
-  affiliation = "Program in Medical and Population Genetics, The Broad
-                 Institute of Harvard and MIT, Cambridge, Massachusetts 02142,
-                 USA.",
-  journal     = "Genome Res.",
-  volume      =  20,
-  number      =  9,
-  pages       = "1297--1303",
-  month       =  sep,
-  year        =  2010,
   language    = "en"
 }
 
@@ -459,7 +567,8 @@
   journal = "Science",
   volume  =  346,
   number  =  6207,
-  year    =  2014
+  year    =  2014,
+  doi     = "10.1126/science.1245993"
 }
 
 @ARTICLE{Conover2006-tk,
@@ -536,7 +645,7 @@
 }
 
 @ARTICLE{Folkvord2014-jj,
-  title     = "Trade-offs between growth and reproduction in wild Atlantic cod",
+  title     = "Trade-offs between growth and reproduction in wild {Atlantic} cod",
   author    = "Folkvord, Arild and J{\o}rgensen, Christian and Korsbrekke, Knut
                and Nash, Richard D M and Nilsen, Trygve and Skj{\ae}raasen, Jon
                Egil",
@@ -597,9 +706,9 @@
 }
 
 @TECHREPORT{Blake2012-ln,
-  title       = "Washington Department of Fish and Wildlife plan for rebuilding
-                 Olympia oyster (\textit{Ostrea lurida}) populations in Puget
-                 Sound with a historical and contemporary overview",
+  title       = "Washington {Department} of {Fish} and {Wildlife} plan for rebuilding
+                 {Olympia} oyster (\textit{Ostrea lurida}) populations in {Puget
+                 Sound} with a historical and contemporary overview",
   author      = "Blake, Brady and Bradbury, Alex",
   institution = "Washington Department of Fish and Wildlife",
   year        =  2012,
@@ -636,7 +745,7 @@
 
 @ARTICLE{Barber1991-og,
   title   = "Genetic variation in the timing of gonadal maturation and spawning
-             of the Eastern Oyster, \textit{Crassostrea virginica} (Gmelin)",
+             of the {Eastern} Oyster, \textit{Crassostrea virginica} (Gmelin)",
   author  = "Barber, B J and Ford, S E and Wargo, R N",
   journal = "Biol. Bull.",
   volume  =  181,
@@ -774,9 +883,27 @@
   year      =  1997
 }
 
+@ARTICLE{Manichaikul2010-cs,
+  title    = "Robust relationship inference in genome-wide association studies",
+  author   = "Manichaikul, Ani and Mychaleckyj, Josyf C and Rich, Stephen S and
+              Daly, Kathy and Sale, Mich{\`e}le and Chen, Wei-Min",
+  journal  = "Bioinformatics",
+  volume   =  26,
+  number   =  22,
+  pages    = "2867--2873",
+  month    =  nov,
+  year     =  2010,
+  language = "en",
+  issn     = "1367-4803, 1367-4811",
+  pmid     = "20926424",
+  doi      = "10.1093/bioinformatics/btq559",
+  pmc      = "PMC3025716"
+}
+
+
 @ARTICLE{Barber2016-ws,
-  title   = "Low temperature brooding of Olympia oysters (\textit{Ostrea
-             lurida}) in northern Puget Sound",
+  title   = "Low temperature brooding of {Olympia} oysters (\textit{Ostrea
+             lurida}) in northern {Puget Sound}",
   author  = "Barber, Julie S and Dexter, Jackie E and Grossman, Sarah K and
              Greiner, Courtney M and Mcardle, James T",
   journal = "J. Shellfish Res.",
@@ -795,8 +922,8 @@
 }
 
 @ARTICLE{Carson2010-xi,
-  title   = "Population connectivity of the Olympia oyster in southern
-             California",
+  title   = "Population connectivity of the {Olympia} oyster in southern
+             {California}",
   author  = "Carson, Henry S",
   journal = "Limnol. Oceanogr.",
   volume  =  55,
@@ -806,6 +933,46 @@
   year    =  2010
 }
 
+@Manual{radiator2017,
+    title = {radiator: RADseq Data Exploration, Manipulation and Visualization using R},
+    year = {2017},
+    author = {Thierry Gosselin},
+    url = {https://github.com/thierrygosselin/stackr},
+    doi = {http://dx.doi.org/10.5281/zenodo.154432},
+  }
+  
+ @Manual{Rbase,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2017},
+    url = {https://www.R-project.org/},
+  }
+
+ @Manual{hierfstat,
+    title = {hierfstat: Estimation and Tests of Hierarchical F-Statistics},
+    author = {Jerome Goudet and Thibaut Jombart},
+    year = {2015},
+    note = {R package version 0.04-22},
+    url = {https://CRAN.R-project.org/package=hierfstat},
+  }
+ 
+ @ARTICLE{Bartlett1937-xt,
+   title     = "Properties of sufficiency and statistical tests",
+   author    = "Bartlett, M S",
+   journal   = "Proc. R. Soc. Lond. A Math. Phys. Sci.",
+   publisher = "The Royal Society",
+   volume    =  160,
+   number    =  901,
+   pages     = "268--282",
+   month     =  may,
+   year      =  1937,
+   language  = "en",
+   issn      = "0080-4630, 2053-9169",
+   doi       = "10.1098/rspa.1937.0109"
+ }
+ 
 @ARTICLE{Schneider2012-js,
   title       = "{NIH} Image to {ImageJ}: 25 years of image analysis",
   author      = "Schneider, Caroline A and Rasband, Wayne S and Eliceiri, Kevin
