Made Products directory, added official PDF

--- a/Products/10666645qcdxnrsmhkgr/Scientific_Reports_main.tex
+++ b/Products/10666645qcdxnrsmhkgr/Scientific_Reports_main.tex
@@ -94,7 +94,7 @@ We thank Puget Sound Restoration Fund for providing facilities, equipment, and h
 Conception and experimental design: K.E.S and S.B.R. Methodology and data acquisition: K.E.S., T.B., and S.B.R. Analysis and interpretation of data: K.E.S. Manuscript writing: K.E.S. All authors reviewed the manuscript. 
 
 \section*{Competing interests}
-The authors declare no competing financial interests.
+The authors declare no competing interests.
 
 \section*{Materials \& Correspondence}
 Correspondence and material requests should be addressed to Katherine Silliman.
@@ -119,12 +119,17 @@ Correspondence and material requests should be addressed to Katherine Silliman.
 \label{fig:Figure 4}
 \end{figure}
 
-\begin{tabular}{SSSSSSSS}\toprule
+\begin{table}[H]
+\centering
+\begin{tabular}{SSSSS}\toprule
     { } & {Fidalgo Bay} & {Dabob Bay} & {Oyster Bay} \\ \midrule
     {$H_o$} & 0.1957    & 0.2000 & 0.2151 \\ 
     {$H_e$} & {0.2081} & {0.2064} & 0.2227 \\
-    {$F_is$} & 0.0593 & 0.0309 & 0.0341\\
+    {$F_{is}$} & 0.0593 & 0.0309 & 0.0341\\
     {$\phi$} & 0.0155 & 0.0436 & 0.0372 \\ \bottomrule
 \end{tabular}
+\caption{$H_o$, observed heterozygosity; $H_e$, expected heterozygosity; $F_{is}$, inbreeding coefficient; $\phi$, kinship coefficient} \label{tab:Table 1}
+\end{table}
+
 
 \end{document}
